--- a/updates--mckinney-makes-media.html
+++ b/updates--mckinney-makes-media.html
@@ -8,12 +8,23 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?3837790900"/>
   <link rel="stylesheet" type="text/css" href="css/master_b-master.css?3795482793"/>
-  <link rel="stylesheet" type="text/css" href="css/updates--mckinney-makes-media.css?3869254975" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/updates--mckinney-makes-media.css?449532051" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
-   </head>
+    <!--custom head HTML-->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-43006730-1', 'mckinneymakesmedia.com');
+  ga('send', 'pageview');
+
+</script>
+ </head>
  <body class="museBGSize">
 
   <div class="clearfix" id="page"><!-- group -->
