mobile site updated

--- a/phone/blog--mckinney-makes-media.html
+++ b/phone/blog--mckinney-makes-media.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=380"/>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?3837790900"/>
-  <link rel="stylesheet" type="text/css" href="css/blog--mckinney-makes-media.css?4153093701" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?344210293"/>
+  <link rel="stylesheet" type="text/css" href="css/blog--mckinney-makes-media.css?212175111" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -17,7 +18,104 @@
  <body>
 
   <div class="clearfix" id="page"><!-- column -->
-   <div class="verticalspacer"></div>
+   <div class="position_content" id="page_position_content">
+    <div class="clearfix colelem" id="pu2619"><!-- group -->
+     <div class="grpelem" id="u2619"><!-- image -->
+      <img class="block" id="u2619_img" src="../images/mmm-website-assets-header.png" alt="" width="380" height="60"/>
+     </div>
+     <a class="nonblock nontext museBGSize grpelem" id="u2621" href="../about-me-contact--mckinney-makes-media.html?devicelock=desktop"><!-- simple frame --></a>
+     <a class="nonblock nontext museBGSize grpelem" id="u2622" href="../design--mckinney-makes-media.html?devicelock=desktop"><!-- simple frame --></a>
+     <a class="nonblock nontext museBGSize grpelem" id="u2623" href="../motion-graphics--mckinney-makes-media.html?devicelock=desktop"><!-- simple frame --></a>
+     <a class="nonblock nontext museBGSize grpelem" id="u2624" href="../time-lapse--mckinney-makes-media.html?devicelock=desktop"><!-- simple frame --></a>
+     <a class="nonblock nontext museBGSize grpelem" id="u2625" href="../updates--mckinney-makes-media.html?devicelock=desktop"><!-- simple frame --></a>
+     <a class="nonblock nontext museBGSize grpelem" id="u2626" href="../index.html?devicelock=desktop"><!-- simple frame --></a>
+    </div>
+    <div class="TabbedPanelsWidget clearfix colelem" id="tab-panelu2987"><!-- column -->
+     <div class="TabbedPanelsTabGroup clearfix colelem" id="u2988"><!-- horizontal box -->
+      <div class="TabbedPanelsTab clearfix grpelem" id="u2993"><!-- horizontal box -->
+       <div class=" NoWrap clearfix grpelem" id="u2996-4"><!-- content -->
+        <p>Welcome to the New Site</p>
+       </div>
+      </div>
+      <div class="TabbedPanelsTab clearfix grpelem" id="u2997"><!-- horizontal box -->
+       <div class=" NoWrap clearfix grpelem" id="u2999-4"><!-- content -->
+        <p>Whole New Look</p>
+       </div>
+      </div>
+      <div class="TabbedPanelsTab clearfix grpelem" id="u2989"><!-- horizontal box -->
+       <div class=" NoWrap clearfix grpelem" id="u2990-4"><!-- content -->
+        <p>Portfolio Update Coming Soon</p>
+       </div>
+      </div>
+     </div>
+     <div class="TabbedPanelsContentGroup clearfix colelem" id="u3001"><!-- stack box -->
+      <div class="TabbedPanelsContent invi clearfix grpelem" id="u3010"><!-- group -->
+       <div class="clearfix grpelem" id="u3011-10"><!-- content -->
+        <p id="u3011-2">Welcome to the First site for MMM</p>
+        <p id="u3011-4">In the five years I've been working as a freelance artist, this is the first website I've</p>
+        <p id="u3011-6">made for the work.&nbsp; I haven't made a site since the AngleFire and GeoCities days.</p>
+        <p id="u3011-8">&nbsp;&nbsp; This is where I will give updates to recent projects, interesting thoughts, and anything else I may find viable.&nbsp; It's sure to get entertaining so stay tuned!</p>
+       </div>
+       <div class="grpelem" id="u3012"><!-- image -->
+        <img class="block" id="u3012_img" src="../images/new%20mmm-01.jpg" alt="" width="154" height="100"/>
+       </div>
+      </div>
+      <div class="TabbedPanelsContent invi clearfix grpelem" id="u3002"><!-- group -->
+       <div class="clearfix grpelem" id="u3003-8"><!-- content -->
+        <p id="u3003-2">Retiring the Old Logo</p>
+        <p id="u3003-4">It is time to say goodbye to one of my favorite logos I've ever had for myself.&nbsp; Every year I challenge myself to come up with a</p>
+        <p id="u3003-6">new aesthetic for myself.&nbsp; This is a great way to make sure I'm progressing as an artist and can re&#45;visualize the same idea in several ways.&nbsp; I hope you like this years rendition.</p>
+       </div>
+       <div class="grpelem" id="u3004"><!-- image -->
+        <img class="block" id="u3004_img" src="../images/mmm%20typo%20logo-01.png" alt="" width="132" height="132"/>
+       </div>
+      </div>
+      <div class="TabbedPanelsContent clearfix grpelem" id="u3006"><!-- group -->
+       <div class="clearfix grpelem" id="u3007"><!-- image -->
+        <div id="u3007_clip">
+         <img class="position_content" id="u3007_img" src="../images/img_0904.jpg" alt="" width="261" height="348"/>
+        </div>
+       </div>
+       <div class="clearfix grpelem" id="u3009-6"><!-- content -->
+        <p id="u3009-2">2013 Reels coming soon!</p>
+        <p id="u3009-4">Within the next couple months, I should have all the updates complete to my time&#45;lapse and motion graphics reels.</p>
+       </div>
+      </div>
+     </div>
+    </div>
+    <div class="verticalspacer"></div>
+    <div class="clearfix colelem" id="pu2627"><!-- group -->
+     <div class="clearfix grpelem" id="u2627"><!-- image -->
+      <div id="u2627_clip">
+       <img class="position_content" id="u2627_img" src="../images/mmm-website-assets-footer.png" alt="" width="379" height="154"/>
+      </div>
+     </div>
+     <a class="nonblock nontext grpelem" id="u2629" href="http://instagram.com/luke_mckinney"><!-- image --><img class="block" id="u2629_img" src="../images/mmm-website-assets-button-ig.png" alt="" width="48" height="48"/></a>
+     <a class="nonblock nontext grpelem" id="u2631" href="http://www.linkedin.com/pub/luke-mckinney/53/285/385/"><!-- image --><img class="block" id="u2631_img" src="../images/mmm-website-assets-button-li.png" alt="" width="48" height="48"/></a>
+     <a class="nonblock nontext grpelem" id="u2633" href="http://vimeo.com/mckinneymakesmedia/videos"><!-- image --><img class="block" id="u2633_img" src="../images/mmm-website-assets-button-vimeo.png" alt="" width="48" height="48"/></a>
+     <a class="nonblock nontext grpelem" id="u2635" href="https://www.facebook.com/mckinneymakesmedia"><!-- image --><img class="block" id="u2635_img" src="../images/mmm-website-assets-button-fb.png" alt="&lt;a href=&quot;http://www.facebook.com/mckinneymakesmedia&quot;&gt;&lt;/a&gt;" width="48" height="48"/></a>
+    </div>
+   </div>
+  </div>
+  <div class="preload_images">
+   <img class="preload" src="../images/mmm-website-assets-button-aboutme2.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-aboutme3.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-aboutme4.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-design2.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-design3.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-design4.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-mg2.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-mg3.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-mg4.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-tl2.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-tl3.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-tl4.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-updates2.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-updates3.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-updates4.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-home2.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-home3.png" alt=""/>
+   <img class="preload" src="../images/mmm-website-assets-button-home4.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
@@ -27,12 +125,16 @@
    window.jQuery || document.write('\x3Cscript src="../scripts/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script src="../scripts/museutils.js?4210811981" type="text/javascript"></script>
+  <script src="../scripts/jquery.musepolyfill.bgsize.js?3812640551" type="text/javascript"></script>
+  <script src="../scripts/webpro.js?4369767" type="text/javascript"></script>
+  <script src="../scripts/musewpdisclosure.js?250538392" type="text/javascript"></script>
   <script src="../scripts/jquery.watch.js?4199601726" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    $(document).ready(function() { try {
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks();/* body */
+Muse.Utils.initWidget('#tab-panelu2987', function(elem) { return new WebPro.Widget.TabbedPanels(elem, {event:'click',defaultIndex:2}); });/* #tab-panelu2987 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
